--- a/Invaders/Invaders/Invaders.csproj
+++ b/Invaders/Invaders/Invaders.csproj
@@ -86,5 +86,8 @@
   <ItemGroup>
     <None Include="Resources\spaceInvaders.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\welcomeTitle.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
