--- a/Invaders/Invaders/Invaders.csproj
+++ b/Invaders/Invaders/Invaders.csproj
@@ -56,9 +56,11 @@
     <Compile Include="Options.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Ship.cs" />
     <Compile Include="Stars.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -88,6 +90,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\welcomeTitle.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\playerShip.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
