写了一半的子弹

--- a/Invaders/Invaders/Invaders.csproj
+++ b/Invaders/Invaders/Invaders.csproj
@@ -97,5 +97,8 @@
   <ItemGroup>
     <None Include="Resources\playerShip.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\normalBullet.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
