--- a/Invaders/Invaders/Invaders.csproj
+++ b/Invaders/Invaders/Invaders.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Bullet.cs" />
     <Compile Include="Gun.cs" />
     <Compile Include="IDraw.cs" />
+    <Compile Include="j.cs" />
     <Compile Include="Options.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
