--- a/Invaders/Invaders/Invaders.csproj
+++ b/Invaders/Invaders/Invaders.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enermy.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -56,7 +57,8 @@
     <Compile Include="Bullet.cs" />
     <Compile Include="Gun.cs" />
     <Compile Include="IDraw.cs" />
-    <Compile Include="j.cs" />
+    <Compile Include="IGo.cs" />
+    <Compile Include="IMove.cs" />
     <Compile Include="Options.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
